<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_start"
          android:icon="@drawable/ic_action_play"
          android:title="@string/action_start"
          android:orderInCategory="1"
          android:showAsAction="always" />
    <item android:id="@+id/action_setFrequency"
          android:title="@string/action_setFrequency"
          android:orderInCategory="2"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_setGain"
          android:title="@string/action_setGain"
          android:orderInCategory="3"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_autoscale"
          android:title="@string/action_autoscale"
          android:orderInCategory="4"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_stop"
          android:icon="@drawable/ic_action_pause"
          android:title="@string/action_stop"
          android:orderInCategory="50"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
